--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.1.2",
     "react-refresh": "^0.14.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
